src/snapshots/salad_core__word_trait__tests__hidden_text.snap
---
source: src/word_trait.rs
expression: output
---
Singleton: '9'
Two Word: '3,4'
Three-Word: '5-4'
Attestation: '11'
