src/snapshots/salad_core__word_trait__tests__hinted_text.snap
---
source: src/word_trait.rs
expression: output
---
Singleton: 'Single _ _ _' / 'Single___'
Two Word: 'Two Wor _' / 'Two Wor_'
Three-Word: 'Three-W _ _ _' / 'Three-W___'
Attestation: 'Attestati _ _' / 'Attestati__'
